--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
+    "gulp-cssnano": "^1.1.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglifyjs": "^0.6.2"
+    "gulp-uglifyjs": "^0.6.2",
+    "node-sass": "^4.12.0"
   }
 }
